--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 mod_version=1.1.8
-minecraft_version=1.20.1
-forge_version=47.1.62
+minecraft_version=1.20.4
+forge_version=20.4.193
 
 curse_type=beta
 projectId=267602
@@ -10,3 +10,7 @@ github_project=Chisel-Team/ConnectedTexturesMod
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
+
+#Parchment settings
+neogradle.subsystems.parchment.minecraftVersion=1.20.4
+neogradle.subsystems.parchment.mappingsVersion=2024.02.25
