--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,6 +1,6 @@
 # Weighted model caching hax
-public net.minecraft.client.resources.model.WeightedBakedModel f_119540_ # totalWeight
-public net.minecraft.client.resources.model.WeightedBakedModel f_119541_ # list
+public net.minecraft.client.resources.model.WeightedBakedModel totalWeight
+public net.minecraft.client.resources.model.WeightedBakedModel list
 
 # ModelBakery hacks
 public net.minecraft.client.resources.model.ModelBakery$ModelBakerImpl
