--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 mod_version=1.1.11
-minecraft_version=1.20.4
-forge_version=20.4.234
+minecraft_version=1.20.6
+forge_version=20.6.113-beta
 
 curse_type=beta
 projectId=267602
@@ -11,6 +11,7 @@ github_project=Chisel-Team/ConnectedTexturesMod
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 
-#Parchment settings
-neogradle.subsystems.parchment.minecraftVersion=1.20.4
-neogradle.subsystems.parchment.mappingsVersion=2024.04.14
+#NeoGradle Settings
+neogradle.subsystems.parchment.minecraftVersion=1.20.6
+neogradle.subsystems.parchment.mappingsVersion=2024.06.02
+neogradle.subsystems.conventions.sourcesets.enabled=false
