--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,14 @@ tasks.named('jar', Jar).configure { Jar jar ->
 
 repositories {
     mavenLocal()
+    maven {
+        name 'Maven for PR #1076' // https://github.com/neoforged/NeoForge/pull/1076
+        url 'https://prmaven.neoforged.net/NeoForge/pr1076'
+        content {
+            includeModule('net.neoforged', 'testframework')
+            includeModule('net.neoforged', 'neoforge')
+        }
+    }
 }
 
 dependencies {
