--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 mod_version=1.1.11
 minecraft_version=1.21
-forge_version=21.0.0-alpha.1.21-rc1.20240611.222608
+forge_version=21.0.0-beta
 
 curse_type=beta
 projectId=267602
